// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current offer parsing on the corpus 2026-02/aod-synthetic 1`] = `
[
  24.99,
  31.5,
  27,
  22.99,
  35,
]
`;

exports[`current offer parsing on the corpus 2026-02/offer-classic-synthetic 1`] = `
[
  22.5,
  28,
  19.99,
]
`;

exports[`current offer parsing on the corpus 2026-02/search-lastpage 1`] = `[]`;

exports[`current offer parsing on the corpus 2026-02/search-results 1`] = `[]`;

exports[`current offer parsing on the corpus 2026-09/aod-pinned-only 1`] = `[]`;

exports[`current offer parsing on the corpus 2026-09/captcha-synthetic 1`] = `[]`;

exports[`current offer parsing on the corpus 2026-09/interstitial-akamai 1`] = `[]`;

exports[`current offer parsing on the corpus 2026-09/product-dp 1`] = `[]`;

exports[`current offer parsing on the corpus 2026-09/search-no-pagination-synthetic 1`] = `[]`;

exports[`current offer parsing on the corpus 2026-09/search-title-recipe-synthetic 1`] = `[]`;

exports[`current offer parsing on the corpus 2026-09/search-yoga-mat 1`] = `[]`;

exports[`current offer parsing on the corpus urls 1`] = `
[
  "https://www.amazon.com/gp/aod/ajax?asin=B0TEST0001&condition=new&m=&qid=&smid=&sourcecustomerorglistid=&sourcecustomerorglistitemid=&sr=&pc=dp",
  "https://www.amazon.com/gp/offer-listing/B0TEST0001/ref=dp_olp_all_mbc?ie=UTF8&condition=new",
]
`;

exports[`current price, rating and review parsers price strings 1`] = `
[
  {
    "analyzer": 19.99,
    "cents": 1999,
    "input": "$19.99",
    "offer": 19.99,
  },
  {
    "analyzer": 1299,
    "cents": 129900,
    "input": "$1,299.00",
    "offer": 1299,
  },
  {
    "analyzer": 12.9924,
    "cents": 1299,
    "input": "$12.99 - $24.99",
    "offer": 12.9924,
  },
  {
    "analyzer": 19.99,
    "cents": 1999,
    "input": "$19.99 ($0.33/Ounce)",
    "offer": 19.99,
  },
  {
    "analyzer": 0,
    "cents": null,
    "input": "See price in cart",
    "offer": 0,
  },
  {
    "analyzer": 1999,
    "cents": 199900,
    "input": "€19,99",
    "offer": 1999,
  },
  {
    "analyzer": 24.99,
    "cents": 2499,
    "input": "CDN$ 24.99",
    "offer": 24.99,
  },
  {
    "analyzer": 0,
    "cents": 0,
    "input": "$0.00",
    "offer": 0,
  },
  {
    "analyzer": 0,
    "cents": null,
    "input": "FREE",
    "offer": 0,
  },
  {
    "analyzer": 24.995,
    "cents": 2500,
    "input": "$24.99 + $5.99 shipping",
    "offer": 24.995,
  },
  {
    "analyzer": 1.005,
    "cents": 100,
    "input": "$1.005",
    "offer": 1.005,
  },
  {
    "analyzer": 30.002,
    "cents": 3000,
    "input": "Was: $30.00 Now: $20.00",
    "offer": 30.002,
  },
  {
    "analyzer": 0,
    "cents": null,
    "input": "N/A",
    "offer": 0,
  },
  {
    "analyzer": 0,
    "cents": null,
    "input": "",
    "offer": 0,
  },
  {
    "analyzer": 0,
    "cents": null,
    "input": null,
    "offer": 0,
  },
  {
    "analyzer": 19.99,
    "cents": 1999,
    "input": 19.99,
    "offer": "throws TypeError",
  },
]
`;

exports[`current price, rating and review parsers rating and review strings 1`] = `
[
  {
    "analyzerRating": 4.5,
    "analyzerReviews": 455,
    "input": "4.5 out of 5 stars",
    "ratingText": 4.5,
    "reviewText": 5,
  },
  {
    "analyzerRating": 4.7,
    "analyzerReviews": 47,
    "input": "4.7",
    "ratingText": 4.7,
    "reviewText": 5,
  },
  {
    "analyzerRating": 0,
    "analyzerReviews": 0,
    "input": "",
    "ratingText": null,
    "reviewText": null,
  },
  {
    "analyzerRating": 0,
    "analyzerReviews": 0,
    "input": null,
    "ratingText": null,
    "reviewText": null,
  },
  {
    "analyzerRating": 0,
    "analyzerReviews": 1083,
    "input": "(108.3K)",
    "ratingText": 108.3,
    "reviewText": 108300,
  },
  {
    "analyzerRating": 0,
    "analyzerReviews": 12,
    "input": "(1.2M)",
    "ratingText": 1.2,
    "reviewText": 1200000,
  },
  {
    "analyzerRating": 0,
    "analyzerReviews": 64,
    "input": "(64)",
    "ratingText": 64,
    "reviewText": 64,
  },
  {
    "analyzerRating": 12,
    "analyzerReviews": 12847,
    "input": "12,847",
    "ratingText": 12,
    "reviewText": 12847,
  },
  {
    "analyzerRating": 0,
    "analyzerReviews": 0,
    "input": "N/A",
    "ratingText": null,
    "reviewText": null,
  },
  {
    "analyzerRating": 0,
    "analyzerReviews": 0,
    "input": "calificaciones",
    "ratingText": null,
    "reviewText": null,
  },
]
`;

exports[`current scraper behavior on the corpus 2026-02/aod-synthetic 1`] = `
{
  "currentItemCount": undefined,
  "helpers": {
    "hasNext": false,
    "nextUrl": "https://www.amazon.com/gp/aod/ajax?asin=B0TEST001&page=2&ref=sr_pg_2",
    "total": 0,
  },
  "isScrapingActive": false,
  "nav": [],
  "results": [],
  "runPage": 0,
  "runPages": [],
  "runStatus": "interrupted",
  "sent": [
    "SCRAPING_COMPLETE",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-02/offer-classic-synthetic 1`] = `
{
  "currentItemCount": undefined,
  "helpers": {
    "hasNext": false,
    "nextUrl": "https://www.amazon.com/gp/offer-listing/B0TEST001?page=2&ref=sr_pg_2",
    "total": 0,
  },
  "isScrapingActive": false,
  "nav": [],
  "results": [],
  "runPage": 0,
  "runPages": [],
  "runStatus": "interrupted",
  "sent": [
    "SCRAPING_COMPLETE",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-02/search-lastpage 1`] = `
{
  "currentItemCount": 1,
  "helpers": {
    "hasNext": false,
    "nextUrl": "https://www.amazon.com/s?k=test+widgets&page=6&ref=sr_pg_6",
    "total": 0,
  },
  "isScrapingActive": false,
  "nav": [],
  "results": [
    {
      "asin": "B0LAST001",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Last Page Product",
      "organicRank": 1,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 1,
          "rank": 1,
          "sponsored": false,
        },
      ],
      "price": "$19.99",
      "priceCents": 1999,
      "rating": 4,
      "reviewCount": 500,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0LAST001",
    },
  ],
  "runPage": 1,
  "runPages": [
    {
      "count": 1,
      "pageIndex": 1,
      "url": "https://www.amazon.com/s?k=test+widgets&page=5",
    },
  ],
  "runStatus": "complete",
  "sent": [
    "UPDATE_PROGRESS",
    "ENQUEUE_SYNC",
    "SCRAPING_COMPLETE",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-02/search-results 1`] = `
{
  "currentItemCount": 4,
  "helpers": {
    "hasNext": true,
    "nextUrl": "https://www.amazon.com/s?k=test+widgets&page=2&ref=sr_pg_2",
    "total": 523,
  },
  "isScrapingActive": true,
  "nav": [
    "[ProScan] Navigating to next page: https://www.amazon.com/s?k=test+widgets&page=2&ref=sr_pg_2",
  ],
  "results": [
    {
      "asin": "B0TEST001",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": true,
      "name": "Test Widget Pro 2000",
      "organicRank": 1,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 1,
          "rank": 1,
          "sponsored": false,
        },
      ],
      "price": "$29.99",
      "priceCents": 2999,
      "rating": 4.5,
      "reviewCount": 12847,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0TEST001",
    },
    {
      "asin": "B0TEST002",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Budget Gadget Basic",
      "organicRank": 2,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 2,
          "rank": 2,
          "sponsored": false,
        },
      ],
      "price": "$9.99",
      "priceCents": 999,
      "rating": 3.8,
      "reviewCount": 247,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0TEST002",
    },
    {
      "asin": "B0TEST003",
      "currency": null,
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Mystery Item No Data",
      "organicRank": 3,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 3,
          "rank": 3,
          "sponsored": false,
        },
      ],
      "price": null,
      "priceCents": null,
      "rating": null,
      "reviewCount": null,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0TEST003",
    },
    {
      "asin": "B0TEST004",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": true,
      "name": "Legacy Star Product",
      "organicRank": 4,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 4,
          "rank": 4,
          "sponsored": false,
        },
      ],
      "price": "$49.99",
      "priceCents": 4999,
      "rating": 4.2,
      "reviewCount": 1500,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0TEST004",
    },
  ],
  "runPage": 1,
  "runPages": [
    {
      "count": 4,
      "pageIndex": 1,
      "url": "https://www.amazon.com/s?k=test+widgets",
    },
  ],
  "runStatus": "running",
  "sent": [
    "UPDATE_PROGRESS",
    "ENQUEUE_SYNC",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-09/aod-pinned-only 1`] = `
{
  "currentItemCount": undefined,
  "helpers": {
    "hasNext": false,
    "nextUrl": "https://www.amazon.com/gp/product/ajax/aodAjaxMain/?asin=B09B8V1LZ3&page=2&ref=sr_pg_2",
    "total": 0,
  },
  "isScrapingActive": false,
  "nav": [],
  "results": [],
  "runPage": 0,
  "runPages": [],
  "runStatus": "interrupted",
  "sent": [
    "SCRAPING_COMPLETE",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-09/captcha-synthetic 1`] = `
{
  "currentItemCount": undefined,
  "helpers": {
    "hasNext": false,
    "nextUrl": "https://www.amazon.com/s?k=yoga+mat&page=4&ref=sr_pg_4",
    "total": 0,
  },
  "isScrapingActive": false,
  "nav": [],
  "results": [],
  "runPage": 0,
  "runPages": [],
  "runStatus": "blocked",
  "sent": [
    "SCRAPING_COMPLETE",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-09/interstitial-akamai 1`] = `
{
  "currentItemCount": undefined,
  "helpers": {
    "hasNext": false,
    "nextUrl": "https://www.amazon.com/s?k=usb+c+cable&page=3&ref=sr_pg_3",
    "total": 0,
  },
  "isScrapingActive": false,
  "nav": [],
  "results": [],
  "runPage": 0,
  "runPages": [],
  "runStatus": "blocked",
  "sent": [
    "SCRAPING_COMPLETE",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-09/product-dp 1`] = `
{
  "currentItemCount": undefined,
  "helpers": {
    "hasNext": false,
    "nextUrl": "https://www.amazon.com/dp/B09B8V1LZ3?page=2&ref=sr_pg_2",
    "total": 0,
  },
  "isScrapingActive": false,
  "nav": [],
  "results": [],
  "runPage": 0,
  "runPages": [],
  "runStatus": "interrupted",
  "sent": [
    "SCRAPING_COMPLETE",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-09/search-no-pagination-synthetic 1`] = `
{
  "currentItemCount": 2,
  "helpers": {
    "hasNext": false,
    "nextUrl": "https://www.amazon.com/s?k=rare+widget&page=2&ref=sr_pg_2",
    "total": 0,
  },
  "isScrapingActive": false,
  "nav": [],
  "results": [
    {
      "asin": "B0ONLYONE1",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Rare Widget, single result",
      "organicRank": 1,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 1,
          "rank": 1,
          "sponsored": false,
        },
      ],
      "price": "$41.00",
      "priceCents": 4100,
      "rating": null,
      "reviewCount": null,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0ONLYONE1",
    },
    {
      "asin": "B0ONLYONE2",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Rare Widget, second result",
      "organicRank": 2,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 2,
          "rank": 2,
          "sponsored": false,
        },
      ],
      "price": "$1,249.00",
      "priceCents": 124900,
      "rating": null,
      "reviewCount": null,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0ONLYONE2",
    },
  ],
  "runPage": 1,
  "runPages": [
    {
      "count": 2,
      "pageIndex": 1,
      "url": "https://www.amazon.com/s?k=rare+widget",
    },
  ],
  "runStatus": "complete",
  "sent": [
    "UPDATE_PROGRESS",
    "ENQUEUE_SYNC",
    "SCRAPING_COMPLETE",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-09/search-title-recipe-synthetic 1`] = `
{
  "currentItemCount": 3,
  "helpers": {
    "hasNext": true,
    "nextUrl": "https://www.amazon.com/s?k=widget&page=2&ref=sr_pg_2",
    "total": 312,
  },
  "isScrapingActive": true,
  "nav": [
    "[ProScan] Navigating to next page: https://www.amazon.com/s?k=widget&page=2&ref=sr_pg_1",
  ],
  "results": [
    {
      "asin": "B0SPONS001",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Acme Widget Pro, 6 ft, Braided",
      "organicRank": 3,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 1,
          "rank": null,
          "sponsored": true,
        },
        {
          "page": 1,
          "position": 4,
          "rank": 3,
          "sponsored": false,
        },
      ],
      "price": "$12.99",
      "priceCents": 1299,
      "rating": 4.4,
      "reviewCount": 2310,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": true,
      "url": "https://www.amazon.com/dp/B0SPONS001",
    },
    {
      "asin": "B0ORGANIC1",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Widget Basic, 3 ft",
      "organicRank": 1,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 2,
          "rank": 1,
          "sponsored": false,
        },
      ],
      "price": "$7.49",
      "priceCents": 749,
      "rating": 4.1,
      "reviewCount": 512,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0ORGANIC1",
    },
    {
      "asin": "B0UNITONLY",
      "currency": null,
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Bulk pack of widgets, 24 count",
      "organicRank": 2,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 3,
          "rank": 2,
          "sponsored": false,
        },
      ],
      "price": null,
      "priceCents": null,
      "rating": null,
      "reviewCount": null,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0UNITONLY",
    },
  ],
  "runPage": 1,
  "runPages": [
    {
      "count": 3,
      "pageIndex": 1,
      "url": "https://www.amazon.com/s?k=widget",
    },
  ],
  "runStatus": "running",
  "sent": [
    "UPDATE_PROGRESS",
    "ENQUEUE_SYNC",
  ],
}
`;

exports[`current scraper behavior on the corpus 2026-09/search-yoga-mat 1`] = `
{
  "currentItemCount": 59,
  "helpers": {
    "hasNext": true,
    "nextUrl": "https://www.amazon.com/s?k=yoga+mat&page=2&ref=sr_pg_2",
    "total": 10000,
  },
  "isScrapingActive": true,
  "nav": [
    "[ProScan] Navigating to next page: https://www.amazon.com/s?k=yoga+mat&page=2&xpid=6P3iGP5SAU5uo&qid=x&ref=sr_pg_1",
  ],
  "results": [
    {
      "asin": "B07H9PZ6MH",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Thick Yoga Mat, Exercise & Fitness Mat with Easy-Cinch Carrying Strap",
      "organicRank": null,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 1,
          "rank": null,
          "sponsored": true,
        },
      ],
      "price": "$21.23",
      "priceCents": 2123,
      "rating": 4.6,
      "reviewCount": 46641,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": true,
      "url": "https://www.amazon.com/dp/B07H9PZ6MH",
    },
    {
      "asin": "B091FX694F",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Retrospec Solana Yoga Mat Thick 1/2in Non-Slip Workout Mat with Nylon Strap - 72x24in Exercise Mat for Pilates, Stretching & Fitness - BPA Free, Easy Clean",
      "organicRank": 10,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 2,
          "rank": null,
          "sponsored": true,
        },
        {
          "page": 1,
          "position": 18,
          "rank": 10,
          "sponsored": false,
        },
      ],
      "price": "$24.99",
      "priceCents": 2499,
      "rating": 4.4,
      "reviewCount": 9310,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": true,
      "url": "https://www.amazon.com/dp/B091FX694F",
    },
    {
      "asin": "B0H25VF5Y1",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Yoga Mat 72" x 24" x 6mm – Non Slip Exercise Mat",
      "organicRank": null,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 3,
          "rank": null,
          "sponsored": true,
        },
      ],
      "price": "$29.99",
      "priceCents": 2999,
      "rating": 4.8,
      "reviewCount": 9,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": true,
      "url": "https://www.amazon.com/dp/B0H25VF5Y1",
    },
    {
      "asin": "B092Y9XX85",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Retrospec Solana Yoga Mat 1" Thick w/Nylon Strap for Men & Women - Non Slip Exercise Mat for Home Yoga, Pilates, Stretching, Floor & Fitness Workouts",
      "organicRank": null,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 4,
          "rank": null,
          "sponsored": true,
        },
      ],
      "price": "$39.99",
      "priceCents": 3999,
      "rating": 4.5,
      "reviewCount": 14999,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": true,
      "url": "https://www.amazon.com/dp/B092Y9XX85",
    },
    {
      "asin": "B07H4G664R",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gruper Yoga Mat Non Slip, Eco Friendly Exercise Mat with Carrying Strap",
      "organicRank": 1,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 5,
          "rank": 1,
          "sponsored": false,
        },
      ],
      "price": "$25.19",
      "priceCents": 2519,
      "rating": 4.4,
      "reviewCount": 10640,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B07H4G664R",
    },
    {
      "asin": "B0FNX94PPX",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Thick Yoga Mat, Exercise & Fitness Mat with Easy-Cinch Carrying Strap",
      "organicRank": 2,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 6,
          "rank": 2,
          "sponsored": false,
        },
      ],
      "price": "$24.98",
      "priceCents": 2498,
      "rating": 4.6,
      "reviewCount": 46641,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0FNX94PPX",
    },
    {
      "asin": "B0HC3HNW26",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Yoga Knee Pad Cushion, 0.6 Inch (15mm) Mini Yoga Mat for Home Workout",
      "organicRank": 3,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 7,
          "rank": 3,
          "sponsored": false,
        },
      ],
      "price": "$8.99",
      "priceCents": 899,
      "rating": 4.5,
      "reviewCount": 2,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0HC3HNW26",
    },
    {
      "asin": "B01LP0UX9G",
      "currency": null,
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Amazon Basics Extra Thick Exercise Yoga Mat with Carrying Strap",
      "organicRank": 4,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 8,
          "rank": 4,
          "sponsored": false,
        },
      ],
      "price": null,
      "priceCents": null,
      "rating": 4.6,
      "reviewCount": 70632,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B01LP0UX9G",
    },
    {
      "asin": "B07H9PZDQW",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Thick Yoga Mat, Exercise & Fitness Mat with Easy-Cinch Carrying Strap",
      "organicRank": 5,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 9,
          "rank": 5,
          "sponsored": false,
        },
      ],
      "price": "$25.02",
      "priceCents": 2502,
      "rating": 4.6,
      "reviewCount": 46641,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B07H9PZDQW",
    },
    {
      "asin": "B07H9KV2YN",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Thick Yoga Mat, Exercise & Fitness Mat with Easy-Cinch Carrying Strap",
      "organicRank": 6,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 10,
          "rank": 6,
          "sponsored": false,
        },
      ],
      "price": "$21.11",
      "priceCents": 2111,
      "rating": 4.6,
      "reviewCount": 46641,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B07H9KV2YN",
    },
    {
      "asin": "B0H28L9MPP",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "HAPBEAR Foldable Yoga Mat with Towel Set - 72"x24"x0.24" (6mm), Non-Slip TPE Exercise Mat with Absorbent Yoga Towel for Home Workout, Yoga, Pilates, Stretching & Travel, Durable & Eco-Friendly, Includes Carry Bag",
      "organicRank": null,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 11,
          "rank": null,
          "sponsored": true,
        },
      ],
      "price": "$39.99",
      "priceCents": 3999,
      "rating": 4.7,
      "reviewCount": 26,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": true,
      "url": "https://www.amazon.com/dp/B0H28L9MPP",
    },
    {
      "asin": "B09M8D4JMD",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "COOLMOON Yoga Mat Non Slip, Anti-Tear 1/4 Thick TPE Yoga Mats for Women and Men, 72"x24" Exercise & Fitness Mat with Carrying Strap, Workout Mats for Yoga, Pilates and Floor Exercise",
      "organicRank": null,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 12,
          "rank": null,
          "sponsored": true,
        },
      ],
      "price": "$36.99",
      "priceCents": 3699,
      "rating": 4.2,
      "reviewCount": 111,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": true,
      "url": "https://www.amazon.com/dp/B09M8D4JMD",
    },
    {
      "asin": "B0GG8RY26S",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "PAIDU Foldable Yoga Mat, 70"x24"x0.31" TPE Non-Slip Mat with Bag",
      "organicRank": null,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 13,
          "rank": null,
          "sponsored": true,
        },
      ],
      "price": "$42.65",
      "priceCents": 4265,
      "rating": 4.4,
      "reviewCount": 31,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": true,
      "url": "https://www.amazon.com/dp/B0GG8RY26S",
    },
    {
      "asin": "B0DFBSMMZS",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "PAIDU Foldable Yoga Mat 10mm Thick, 75"x26" Non-Slip Fitness Exercise Mat",
      "organicRank": null,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 14,
          "rank": null,
          "sponsored": true,
        },
      ],
      "price": "$51.49",
      "priceCents": 5149,
      "rating": 4.3,
      "reviewCount": 100,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": true,
      "url": "https://www.amazon.com/dp/B0DFBSMMZS",
    },
    {
      "asin": "B0HGFH7QVH",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "6.2x3ft Folding Gym Mat, 3" Thick",
      "organicRank": 7,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 15,
          "rank": 7,
          "sponsored": false,
        },
      ],
      "price": "$59.99",
      "priceCents": 5999,
      "rating": 5,
      "reviewCount": 4,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0HGFH7QVH",
    },
    {
      "asin": "B07JQCVBBZ",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gruper Yoga Mat Non Slip, Eco Friendly Exercise Mat with Carrying Strap",
      "organicRank": 8,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 16,
          "rank": 8,
          "sponsored": false,
        },
      ],
      "price": "$28.16",
      "priceCents": 2816,
      "rating": 4.4,
      "reviewCount": 10640,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B07JQCVBBZ",
    },
    {
      "asin": "B09WF85T8M",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Yoga Mat - Premium 6mm Print Reversible Extra Thick Non Slip Exercise & Fitness Mat for All Types of Yoga, Pilates & Floor Workouts (68" x 24" x 6mm Thick)",
      "organicRank": 9,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 17,
          "rank": 9,
          "sponsored": false,
        },
      ],
      "price": "$22.75",
      "priceCents": 2275,
      "rating": 4.6,
      "reviewCount": 15587,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B09WF85T8M",
    },
    {
      "asin": "B0GNWFRM3X",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Stakt Foldable Yoga Mat Pro - Non Slip 2 in 1 Fitness Exercise Mat",
      "organicRank": null,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 19,
          "rank": null,
          "sponsored": true,
        },
      ],
      "price": "$128.00",
      "priceCents": 12800,
      "rating": 4.2,
      "reviewCount": 57,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": true,
      "url": "https://www.amazon.com/dp/B0GNWFRM3X",
    },
    {
      "asin": "B0FHGMLGVG",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Foldable Yoga Mat Extra Large 74"×31.5"",
      "organicRank": null,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 20,
          "rank": null,
          "sponsored": true,
        },
      ],
      "price": "$45.99",
      "priceCents": 4599,
      "rating": 4.4,
      "reviewCount": 77,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": true,
      "url": "https://www.amazon.com/dp/B0FHGMLGVG",
    },
    {
      "asin": "B0DRJ8VH3Q",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Yoga Mat, 80cm Wide, 1/3 Inch Thick Exercise Mat, Carry Strap, Fitness",
      "organicRank": null,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 21,
          "rank": null,
          "sponsored": true,
        },
      ],
      "price": "$29.99",
      "priceCents": 2999,
      "rating": 4.5,
      "reviewCount": 47,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": true,
      "url": "https://www.amazon.com/dp/B0DRJ8VH3Q",
    },
    {
      "asin": "B0GJSKH1GN",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "KEEP 72" x 24" Yoga Mat, 7mm Thick Non Slip TPE Mat",
      "organicRank": null,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 22,
          "rank": null,
          "sponsored": true,
        },
      ],
      "price": "$24.99",
      "priceCents": 2499,
      "rating": 4.3,
      "reviewCount": 91,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": true,
      "url": "https://www.amazon.com/dp/B0GJSKH1GN",
    },
    {
      "asin": "B0C7SFV8RH",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "CAP Barbell 1/2-Inch High Density Exercise Yoga Mat with Strap | Multiple Options",
      "organicRank": 11,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 23,
          "rank": 11,
          "sponsored": false,
        },
      ],
      "price": "$15.99",
      "priceCents": 1599,
      "rating": 4.6,
      "reviewCount": 3854,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0C7SFV8RH",
    },
    {
      "asin": "B0FQKYGYGX",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "CAP Barbell 1/2-Inch High Density Exercise Yoga Mat with Strap | Multiple Options",
      "organicRank": 12,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 24,
          "rank": 12,
          "sponsored": false,
        },
      ],
      "price": "$15.99",
      "priceCents": 1599,
      "rating": 4.6,
      "reviewCount": 3854,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0FQKYGYGX",
    },
    {
      "asin": "B0B74MRJS3",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "KEEP Extra Wide Yoga Mat, 7mm Thick 72" x 32" Exercise Mat",
      "organicRank": 13,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 25,
          "rank": 13,
          "sponsored": false,
        },
      ],
      "price": "$29.98",
      "priceCents": 2998,
      "rating": 4.5,
      "reviewCount": 735,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0B74MRJS3",
    },
    {
      "asin": "B0GLQH4453",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "18 Pcs EVA Foam Floor Tiles, Puzzle Exercise Mat Set for Gym",
      "organicRank": 14,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 26,
          "rank": 14,
          "sponsored": false,
        },
      ],
      "price": "$22.49",
      "priceCents": 2249,
      "rating": 4.2,
      "reviewCount": 1115,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0GLQH4453",
    },
    {
      "asin": "B092XNCFF7",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Retrospec Solana Yoga Mat 1" Thick w/Nylon Strap for Men & Women - Non Slip Exercise Mat for Home Yoga, Pilates, Stretching, Floor & Fitness Workouts",
      "organicRank": 15,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 27,
          "rank": 15,
          "sponsored": false,
        },
      ],
      "price": "$39.99",
      "priceCents": 3999,
      "rating": 4.5,
      "reviewCount": 14999,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B092XNCFF7",
    },
    {
      "asin": "B0D9MWTQ9K",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "CAP Barbell Folding Exercise Mat – Durable, Anti-Tear, Thick Padding for Fitness, Aerobics, Gymnastics & Home Workouts. 72"L x 24"W x 2"Thick. BLACK",
      "organicRank": 16,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 28,
          "rank": 16,
          "sponsored": false,
        },
      ],
      "price": "$36.97",
      "priceCents": 3697,
      "rating": 4.7,
      "reviewCount": 1486,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0D9MWTQ9K",
    },
    {
      "asin": "B0FNXCBRGL",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Thick Yoga Mat, Exercise & Fitness Mat with Easy-Cinch Carrying Strap",
      "organicRank": 17,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 29,
          "rank": 17,
          "sponsored": false,
        },
      ],
      "price": "$24.98",
      "priceCents": 2498,
      "rating": 4.6,
      "reviewCount": 46641,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0FNXCBRGL",
    },
    {
      "asin": "B0FX3RZ2YN",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gruper Yoga Mat Non Slip, Anti-Tear Workout Mat with Carrying Strap and Bag",
      "organicRank": 18,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 30,
          "rank": 18,
          "sponsored": false,
        },
      ],
      "price": "$22.49",
      "priceCents": 2249,
      "rating": 4.4,
      "reviewCount": 548,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0FX3RZ2YN",
    },
    {
      "asin": "B01IZDFWPG",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Fitvids All Purpose 1/4-Inch High Density Anti-Tear Exercise Yoga Mat with Carrying Strap with Optional Yoga Blocks, Multiple Colors",
      "organicRank": 19,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 31,
          "rank": 19,
          "sponsored": false,
        },
      ],
      "price": "$16.99",
      "priceCents": 1699,
      "rating": 4.4,
      "reviewCount": 47391,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B01IZDFWPG",
    },
    {
      "asin": "B0C359D7JX",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Yoga Mat - Premium 5mm Solid Thick Non Slip Exercise & Fitness Mat for All Types of Yoga, Pilates & Floor Workouts (68" x 24" x 5mm)",
      "organicRank": 20,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 32,
          "rank": 20,
          "sponsored": false,
        },
      ],
      "price": "$20.81",
      "priceCents": 2081,
      "rating": 4.4,
      "reviewCount": 4305,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0C359D7JX",
    },
    {
      "asin": "B0BYFFX51Z",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Premium Yoga Mat, 6mm Thick Print Mat",
      "organicRank": 21,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 33,
          "rank": 21,
          "sponsored": false,
        },
      ],
      "price": "$19.29",
      "priceCents": 1929,
      "rating": 4.7,
      "reviewCount": 22194,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0BYFFX51Z",
    },
    {
      "asin": "B09WF4GPPC",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Premium Yoga Mat, 6mm Thick Print Mat",
      "organicRank": 22,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 34,
          "rank": 22,
          "sponsored": false,
        },
      ],
      "price": "$21.00",
      "priceCents": 2100,
      "rating": 4.7,
      "reviewCount": 22194,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B09WF4GPPC",
    },
    {
      "asin": "B0DG3WYD54",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "CAP Barbell 1/2-Inch High Density Exercise Yoga Mat with Strap | Multiple Options",
      "organicRank": 23,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 35,
          "rank": 23,
          "sponsored": false,
        },
      ],
      "price": "$18.99",
      "priceCents": 1899,
      "rating": 4.6,
      "reviewCount": 3854,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0DG3WYD54",
    },
    {
      "asin": "B091FZL25K",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Retrospec Solana Yoga Mat Thick 1/2in Non-Slip Workout Mat with Nylon Strap - 72x24in Exercise Mat for Pilates, Stretching & Fitness - BPA Free, Easy Clean",
      "organicRank": 24,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 36,
          "rank": 24,
          "sponsored": false,
        },
      ],
      "price": "$24.99",
      "priceCents": 2499,
      "rating": 4.4,
      "reviewCount": 9310,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B091FZL25K",
    },
    {
      "asin": "B0GFZ72SJR",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "KEEP Extra Thick NBR Yoga Mat for Women & Men, 10mm Thick, 72”x32” Large Exercise Mat with Non-Slip Workout Mat for Yoga, Pilates, Stretching, Meditation – Wide & Cushioned Fitness Mat",
      "organicRank": 25,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 37,
          "rank": 25,
          "sponsored": false,
        },
      ],
      "price": "$21.99",
      "priceCents": 2199,
      "rating": 4.5,
      "reviewCount": 295,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0GFZ72SJR",
    },
    {
      "asin": "B01MY5MZSQ",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Yoga Mat Classic Print, 4mm Non-Slip Mat",
      "organicRank": 26,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 38,
          "rank": 26,
          "sponsored": false,
        },
      ],
      "price": "$24.38",
      "priceCents": 2438,
      "rating": 4.5,
      "reviewCount": 12620,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B01MY5MZSQ",
    },
    {
      "asin": "B005NZ7PEQ",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Manduka PRO Yoga Mat - 6mm | Lifetime Durability | Hygienic Construction | Premium Studio Quality | Teacher Approved",
      "organicRank": 27,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 39,
          "rank": 27,
          "sponsored": false,
        },
      ],
      "price": "$144.00",
      "priceCents": 14400,
      "rating": 4.5,
      "reviewCount": 9005,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B005NZ7PEQ",
    },
    {
      "asin": "B0CJ39LHNX",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "YOGATI® Yoga Mat with Strap with Alignment Lines. Home Workout Mat for Women, Men and Kids. Thick Non Slip Yoga Mat for Pilates and Fitness. Brown, Pink and Purple Yoga Mats",
      "organicRank": 28,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 40,
          "rank": 28,
          "sponsored": false,
        },
      ],
      "price": "$19.98",
      "priceCents": 1998,
      "rating": 4.5,
      "reviewCount": 7726,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0CJ39LHNX",
    },
    {
      "asin": "B0CP47T6ZP",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Voyage 5mm Studio Yoga Mats, 6 Pack, 72x24in",
      "organicRank": 29,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 41,
          "rank": 29,
          "sponsored": false,
        },
      ],
      "price": "$99.99",
      "priceCents": 9999,
      "rating": 4.8,
      "reviewCount": 125,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0CP47T6ZP",
    },
    {
      "asin": "B0CL9CR6FJ",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Economy 3mm Bulk Yoga Mats, 10 Pack, 68x24in",
      "organicRank": 30,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 42,
          "rank": 30,
          "sponsored": false,
        },
      ],
      "price": "$89.99",
      "priceCents": 8999,
      "rating": 4.7,
      "reviewCount": 21,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0CL9CR6FJ",
    },
    {
      "asin": "B087F16GKW",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Yoga Mat - Premium 5mm Solid Thick Non Slip Exercise & Fitness Mat for All Types of Yoga, Pilates & Floor Workouts (68" x 24" x 5mm)",
      "organicRank": 31,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 43,
          "rank": 31,
          "sponsored": false,
        },
      ],
      "price": "$22.65",
      "priceCents": 2265,
      "rating": 4.4,
      "reviewCount": 4305,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B087F16GKW",
    },
    {
      "asin": "B0F6426TRG",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Manduka PROlite Yoga Mat 4.7mm | Lifetime Durability | Hygienic Construction | Teacher Approved",
      "organicRank": 32,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 44,
          "rank": 32,
          "sponsored": false,
        },
      ],
      "price": "$99.99",
      "priceCents": 9999,
      "rating": 4.5,
      "reviewCount": 4599,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0F6426TRG",
    },
    {
      "asin": "B01LP0U5X0",
      "currency": null,
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Amazon Basics Extra Thick Exercise Yoga Mat with Carrying Strap",
      "organicRank": 33,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 45,
          "rank": 33,
          "sponsored": false,
        },
      ],
      "price": null,
      "priceCents": null,
      "rating": 4.6,
      "reviewCount": 70632,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B01LP0U5X0",
    },
    {
      "asin": "B0DQC2WV8Y",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Fitvids 1/2-inch Thick High Density Exercise Yoga Mat with Carrying Strap",
      "organicRank": 34,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 46,
          "rank": 34,
          "sponsored": false,
        },
      ],
      "price": "$20.99",
      "priceCents": 2099,
      "rating": 4.5,
      "reviewCount": 94420,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0DQC2WV8Y",
    },
    {
      "asin": "B01I5CFUHM",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Manduka PRO Yoga Mat - 6mm | Lifetime Durability | Hygienic Construction | Premium Studio Quality | Teacher Approved",
      "organicRank": 35,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 47,
          "rank": 35,
          "sponsored": false,
        },
      ],
      "price": "$144.00",
      "priceCents": 14400,
      "rating": 4.5,
      "reviewCount": 9005,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B01I5CFUHM",
    },
    {
      "asin": "B07H9KV1GG",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Essentials 1/4" Thin (6mm) Yoga & Pilates, Fitness & Exercise Mat with Easy-Cinch Carrier Strap Cusion Support For Fitness and Gym Workouts",
      "organicRank": 36,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 48,
          "rank": 36,
          "sponsored": false,
        },
      ],
      "price": "$20.69",
      "priceCents": 2069,
      "rating": 4.6,
      "reviewCount": 14969,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B07H9KV1GG",
    },
    {
      "asin": "B0BPC5YDDV",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Funtery 3 mm Thin Yoga Mats Bulk, 68 x 24 in",
      "organicRank": 37,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 49,
          "rank": 37,
          "sponsored": false,
        },
      ],
      "price": "$129.99",
      "priceCents": 12999,
      "rating": 3.6,
      "reviewCount": 146,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0BPC5YDDV",
    },
    {
      "asin": "B0DSR7K8CL",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Sunny Health & Fitness Exercise Yoga Mats - Non-Slip Support for Home & Gym",
      "organicRank": 38,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 50,
          "rank": 38,
          "sponsored": false,
        },
      ],
      "price": "$18.99",
      "priceCents": 1899,
      "rating": 4.4,
      "reviewCount": 6024,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0DSR7K8CL",
    },
    {
      "asin": "B0D4MFT49T",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Premium Yoga Mat, 6mm Thick Print Mat",
      "organicRank": 39,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 51,
          "rank": 39,
          "sponsored": false,
        },
      ],
      "price": "$39.99",
      "priceCents": 3999,
      "rating": 4.7,
      "reviewCount": 22194,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0D4MFT49T",
    },
    {
      "asin": "B0F7YCXYHV",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Cork Yoga Mat with Natural Rubber Base, Extra Size, Thickness and Support, Excellent Cushion & Grip, Non-Slip, Non-Toxic, Sweat-Resistant, Sustainable, Eco-friendly Exercise Mat",
      "organicRank": 40,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 52,
          "rank": 40,
          "sponsored": false,
        },
      ],
      "price": "$89.00",
      "priceCents": 8900,
      "rating": 4.6,
      "reviewCount": 255,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0F7YCXYHV",
    },
    {
      "asin": "B0FNN64N3C",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "SPRI Hanging Exercise Mats for Gyms, Closed-Cell Foam Yoga & Fitness Mats with Grommets, Thick Workout Mats for Studios & Group Fitness Classes",
      "organicRank": 41,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 53,
          "rank": 41,
          "sponsored": false,
        },
      ],
      "price": "$233.01",
      "priceCents": 23301,
      "rating": 4.7,
      "reviewCount": 8,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0FNN64N3C",
    },
    {
      "asin": "B0DM6JN33F",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Amazon Basics 1/4 Inch Thick TPE Exercise Yoga Mat with Carrying Strap",
      "organicRank": 42,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 54,
          "rank": 42,
          "sponsored": false,
        },
      ],
      "price": "$19.27",
      "priceCents": 1927,
      "rating": 4.6,
      "reviewCount": 968,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0DM6JN33F",
    },
    {
      "asin": "B0876QTBKZ",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "CAMBIVO Extra Long Wide Yoga Mat, Thick PVC Workout Mat",
      "organicRank": 43,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 55,
          "rank": 43,
          "sponsored": false,
        },
      ],
      "price": "$39.99",
      "priceCents": 3999,
      "rating": 4.6,
      "reviewCount": 3287,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0876QTBKZ",
    },
    {
      "asin": "B0C35Q9B95",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Gaiam Yoga Mat - Premium 5mm Solid Thick Non Slip Exercise & Fitness Mat for All Types of Yoga, Pilates & Floor Workouts (68" x 24" x 5mm)",
      "organicRank": 44,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 56,
          "rank": 44,
          "sponsored": false,
        },
      ],
      "price": "$23.47",
      "priceCents": 2347,
      "rating": 4.4,
      "reviewCount": 4305,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0C35Q9B95",
    },
    {
      "asin": "B08R5ZG89X",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Heathyoga Yoga Mat Non Slip TPE Pilates Exercise Mats for Home Workout Gym Fitness Eco Friendly Thick Hot Yoga Mat with Strap Body Alignment,72"x 26" Thickness 1/4"",
      "organicRank": 45,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 57,
          "rank": 45,
          "sponsored": false,
        },
      ],
      "price": "$36.99",
      "priceCents": 3699,
      "rating": 4.5,
      "reviewCount": 9506,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B08R5ZG89X",
    },
    {
      "asin": "B07664K1CW",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "ProsourceFit Exercise Balance Pad, Non-Slip Cushioned Foam Mat & Knee Pad for Fitness and Stability Training, Yoga, Physical Therapy",
      "organicRank": 46,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 58,
          "rank": 46,
          "sponsored": false,
        },
      ],
      "price": "$26.99",
      "priceCents": 2699,
      "rating": 4.8,
      "reviewCount": 17261,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B07664K1CW",
    },
    {
      "asin": "B07234M1LY",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "CAP Non-Slip Yoga Mat for Home Workout & Pilates, Lightweight Exercise Fitness Mat with Textured Grip Surface, Portable Roll-Up Yoga Mat for Women & Men",
      "organicRank": 47,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 59,
          "rank": 47,
          "sponsored": false,
        },
      ],
      "price": "$11.99",
      "priceCents": 1199,
      "rating": 4.2,
      "reviewCount": 5199,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B07234M1LY",
    },
    {
      "asin": "B0CF64T5JY",
      "currency": "USD",
      "delta": {
        "dPriceCents": null,
        "dRating": null,
        "dReviews": null,
        "isNew": true,
      },
      "isPrime": false,
      "name": "Liforme Travel Yoga Mat - Patented Alignment Design, Advanced Non-Slip Grip",
      "organicRank": 48,
      "pageIndex": 1,
      "placements": [
        {
          "page": 1,
          "position": 60,
          "rank": 48,
          "sponsored": false,
        },
      ],
      "price": "$160.00",
      "priceCents": 16000,
      "rating": 4.4,
      "reviewCount": 984,
      "runId": "run-golden",
      "scrapedAt": "string",
      "sponsored": false,
      "url": "https://www.amazon.com/dp/B0CF64T5JY",
    },
  ],
  "runPage": 1,
  "runPages": [
    {
      "count": 59,
      "pageIndex": 1,
      "url": "https://www.amazon.com/s?k=yoga+mat",
    },
  ],
  "runStatus": "running",
  "sent": [
    "UPDATE_PROGRESS",
    "ENQUEUE_SYNC",
  ],
}
`;
